...
      changePin: 'PIN-kodni oʻzgartirish',
      disableConfirm: 'Ilova blokirovkasini oʻchirish uchun PIN-kodni kiriting',
    },
  },
  layout: {
    tabs: {
      home: 'Asosiy',
      expenses: 'Xarajatlar',
      budgets: 'Budjetlar',
      more: 'Yana',
      add: "Qo'shish",
    },
    recordingHub: {
...
