appId: com.ahror2937.sarflog
---
- launchApp:
    clearState: true

- tapOn: "Forgot your password?"
- assertVisible: "Reset your password"

- tapOn: "Email"
- inputText: "test@example.com"
- hideKeyboard

- tapOn: "Send reset link"

- assertVisible: "Link Sent!"
- assertVisible: "If the account exists, please check your email inbox for a link to complete the reset."

- tapOn: "Back to sign in"
- assertVisible: "Sign in to your account"
